<resources>
    <string name="app_name">Paint Calculator</string>
    <string name="txtSplash">Splash Screen Image</string>
    <string name="txtLoading">Loading…</string>
    <string name="txtAddRoom">Adding room…</string>
    <string name="btnAddRoom">Add Room</string>
    <string name="txtAddWindow">Adding window…</string>
    <string name="btnAddWindow">Add window</string>
    <string name="txtAddDoor">Adding door…</string>
    <string name="btnAddDoor">Add door</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtSeeding">Seeding…</string>
    <string name="btnSeedTestData">Seed test data</string>
    <string name="btnSeed">Seed</string>
    <string name="txtSelectColor">Select color</string>
    <string name="txtDelete">Deleting…</string>
    <string name="txtCalculationResult">Result</string>
    <string name="txtDeleteConfirmationMessage">The data will be immediately removed and cannot be recovered.</string>
    <string name="txtDeleteConfirmationQuestion">Are you sure you want to proceed with this action?</string>
    <string name="txtSeedingConfirmationMessage">This process that you are about to proceed with is for testing purposes only. I have seeded some sample data that you can use to test the functionality of my application. If you decide to use my application for your own calculations, you can easily remove the seeded data and replace it with your own.</string>
    <string name="txtSeedingConfirmationQuestion">Are you sure you want to seed sample data?</string>
    <string name="lblHeight">Height:</string>
    <string name="lblWidth">Width:</string>
    <string name="lblLength">Length:</string>
    <string name="lblFT">FT</string>
    <string name="lblInch">in</string>
    <string name="lblQuantity">Quantity:</string>
    <string name="lblPcs">pcs</string>
    <string name="txtTrims">Trims</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnClose">Close</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSelect">Select</string>
    <string name="lblColor">Paint color:</string>
    <string name="btnClear">Delete all rooms</string>
    <string name="lblRoomTitle">Enter title for the room</string>
    <string name="promptRoom">Chose the room</string>
    <string name="lblForTheRoom">For the room:</string>
</resources>