<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeleteConfirmationActivity">

    <TextView
        android:id="@+id/txtDeleteConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6200EE"
        android:gravity="center_horizontal"
        android:text="@string/txtDelete"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:padding="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDeleteConfirmationMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/txtDeleteConfirmationMessage"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtDeleteConfirmationQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/txtDeleteConfirmationQuestion"
        android:textColor="#FF0000"
        android:textSize="24sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDelete"
            android:textSize="24sp"
            android:layout_marginEnd="5sp" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:textSize="24sp"
            android:layout_marginStart="5sp" />

    </TableRow>
</LinearLayout>