<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddWindowActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAddWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6200EE"
                android:gravity="center_horizontal"
                android:text="@string/txtAddWindow"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:padding="10sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:gravity="end">

                <TextView
                    android:id="@+id/lblWindowWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp"
                    android:text="@string/lblWidth"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtWindowWidthFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:inputType="number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblWindowWidthFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblFT"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtWindowWidthInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblWindowWidthInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInch"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:gravity="end">

                <TextView
                    android:id="@+id/lblWindowLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp"
                    android:text="@string/lblLength"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtWindowLengthFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:inputType="number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblWindowLengthFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblFT"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtWindowLengthInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblWindowLengthInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInch"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:gravity="end">

                <TextView
                    android:id="@+id/lblWindowQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp"
                    android:text="@string/lblQuantity"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtWindowQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblWindowPcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPcs"
                    android:textSize="20sp" />
            </TableRow>

            <TextView
                android:id="@+id/lblWindowTrims"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:background="#33000000"
                android:text="@string/txtTrims"
                android:textSize="20sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:gravity="end">

                <TextView
                    android:id="@+id/lblWindowTrimsWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp"
                    android:text="@string/lblWidth"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtWindowTrimsWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lblWindowTrimsWidthInches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInch"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:gravity="end">

                <TextView
                    android:id="@+id/lblWindowTrimsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblColor"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnWindowTrimsColor"
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:paddingLeft="13dp"
                    android:paddingTop="0dp"
                    android:paddingRight="13dp"
                    android:paddingBottom="0dp"
                    android:textSize="20sp"
                    app:cornerRadius="2sp"
                    app:icon="@color/white"
                    app:iconTint="#FFFFFF"
                    app:strokeColor="#FF6200EE"
                    app:strokeWidth="2dp" />

            </TableRow>

            <TextView
                android:id="@+id/lblWindowToRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/lblForTheRoom"
                android:background="#33000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/txtExistingRoom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:prompt="@string/promptRoom"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnAddWindowSave"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSave"
                    android:layout_marginEnd="5sp"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnAddWindowCancel"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancel"
                    android:layout_marginStart="5sp"
                    android:textSize="24sp" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</LinearLayout>