<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnAddRoom"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="0.3"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/btnAddRoom"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAddWindow"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="0.3"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/btnAddWindow"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAddDoor"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="0.3"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/btnAddDoor"
            android:textSize="20sp" />
    </TableRow>

    <Button
        android:id="@+id/btnClear"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRoomsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:textSize="20sp" />

            <TableLayout
                android:id="@+id/tblRoomsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>